src/objects/NI_REST_Parameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Parameter__c</fullName>
        <label>Parameter</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NI_REST_Parameters</label>
</CustomObject>